asgn3/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    KWRD_TYPE
    LOWER_BOUND
    KWRD_LAZY
    VIEWABLE
    KWRD_THIS
    KWRD_WITH
    KWRD_FORSOME
    KWRD_TRY
    NIL
    KWRD_SUPER
    KWRD_PACKAGE
    EXACTEQ
    KWRD_ABST
    KWRD_FOREACH
    KWRD_STATIC
    UNDER
    UPPER_BOUND
    VIEW
    INNER_CLASS
    KWRD_THROW
    KWRD_MACRO
    KWRD_PUBLIC
    KWRD_FINAL
    COMM
    KWRD_IMPLICIT
    KWRD_SEALED
    KWRD_FINALLY
    SUBTYPE
    QUESTION
    KWRD_IMPORT
    KWRD_YIELD
    KWRD_OVERRIDE
    newline
    AT
    KWRD_TRAIT
    KWRD_CATCH

Grammar

Rule 0     S' -> ProgramStructure
Rule 1     ProgramStructure -> ProgramStructure class_and_objects
Rule 2     ProgramStructure -> class_and_objects
Rule 3     class_and_objects -> SingletonObject
Rule 4     class_and_objects -> class_declaration
Rule 5     SingletonObject -> ObjectDeclare block
Rule 6     ObjectDeclare -> KWRD_OBJECT IDENTIFIER
Rule 7     ObjectDeclare -> KWRD_OBJECT IDENTIFIER KWRD_EXTNDS IDENTIFIER
Rule 8     expression -> assignment_expression
Rule 9     expression_optional -> expression
Rule 10    expression_optional -> empty
Rule 11    assignment_expression -> assignment
Rule 12    assignment_expression -> conditional_or_expression
Rule 13    assignment -> valid_variable assignment_operator assignment_expression
Rule 14    assignment_operator -> ASSIGN
Rule 15    assignment_operator -> TIMES_ASSIGN
Rule 16    assignment_operator -> DIVIDE_ASSIGN
Rule 17    assignment_operator -> REMAINDER_ASSIGN
Rule 18    assignment_operator -> PLUS_ASSIGN
Rule 19    assignment_operator -> MINUS_ASSIGN
Rule 20    assignment_operator -> LSHIFT_ASSIGN
Rule 21    assignment_operator -> RSHIFT_ASSIGN
Rule 22    assignment_operator -> AND_ASSIGN
Rule 23    assignment_operator -> OR_ASSIGN
Rule 24    assignment_operator -> XOR_ASSIGN
Rule 25    conditional_or_expression -> conditional_and_expression
Rule 26    conditional_or_expression -> conditional_or_expression OR conditional_and_expression
Rule 27    conditional_and_expression -> inclusive_or_expression
Rule 28    conditional_and_expression -> conditional_and_expression AND inclusive_or_expression
Rule 29    inclusive_or_expression -> exclusive_or_expression
Rule 30    inclusive_or_expression -> inclusive_or_expression OR_BITWISE exclusive_or_expression
Rule 31    exclusive_or_expression -> and_expression
Rule 32    exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 33    and_expression -> equality_expression
Rule 34    and_expression -> and_expression AND_BITWISE equality_expression
Rule 35    equality_expression -> relational_expression
Rule 36    equality_expression -> equality_expression EQUAL relational_expression
Rule 37    equality_expression -> equality_expression NEQUAL relational_expression
Rule 38    relational_expression -> shift_expression
Rule 39    relational_expression -> relational_expression GREATER shift_expression
Rule 40    relational_expression -> relational_expression LESS shift_expression
Rule 41    relational_expression -> relational_expression GEQ shift_expression
Rule 42    relational_expression -> relational_expression LEQ shift_expression
Rule 43    shift_expression -> additive_expression
Rule 44    shift_expression -> shift_expression LSHIFT additive_expression
Rule 45    shift_expression -> shift_expression RSHIFT additive_expression
Rule 46    additive_expression -> multiplicative_expression
Rule 47    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 48    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 49    multiplicative_expression -> unary_expression
Rule 50    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 51    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 52    multiplicative_expression -> multiplicative_expression REMAINDER unary_expression
Rule 53    unary_expression -> PLUS unary_expression
Rule 54    unary_expression -> MINUS unary_expression
Rule 55    unary_expression -> unary_expression_not_plus_minus
Rule 56    unary_expression_not_plus_minus -> base_variable_set
Rule 57    unary_expression_not_plus_minus -> TILDA unary_expression
Rule 58    unary_expression_not_plus_minus -> NOT unary_expression
Rule 59    unary_expression_not_plus_minus -> cast_expression
Rule 60    base_variable_set -> variable_literal
Rule 61    base_variable_set -> LPAREN expression RPAREN
Rule 62    cast_expression -> LPAREN primitive_type RPAREN unary_expression
Rule 63    primary -> literal
Rule 64    primary -> method_invocation
Rule 65    literal -> int_float
Rule 66    literal -> CHARACTER
Rule 67    literal -> STRING_CONST
Rule 68    literal -> BOOL_CONSTT
Rule 69    literal -> BOOL_CONSTF
Rule 70    literal -> KWRD_NULL
Rule 71    int_float -> FLOAT_CONST
Rule 72    int_float -> INT_CONST
Rule 73    method_invocation -> name LPAREN argument_list_opt RPAREN
Rule 74    array_access -> name LBPAREN expression RBPAREN
Rule 75    argument_list_opt -> argument_list
Rule 76    argument_list_opt -> empty
Rule 77    argument_list -> expression
Rule 78    argument_list -> argument_list COMMA expression
Rule 79    name -> simple_name
Rule 80    name -> qualified_name
Rule 81    simple_name -> IDENTIFIER
Rule 82    qualified_name -> name DOT simple_name
Rule 83    valid_variable -> name
Rule 84    valid_variable -> array_access
Rule 85    variable_literal -> valid_variable
Rule 86    variable_literal -> primary
Rule 87    block -> start_scope block_statements_opt end_scope
Rule 88    start_scope -> BLOCK_BEGIN
Rule 89    end_scope -> BLOCK_END
Rule 90    block_statements_opt -> block_statements
Rule 91    block_statements_opt -> empty
Rule 92    block_statements -> block_statement
Rule 93    block_statements -> block_statements block_statement
Rule 94    block_statement -> local_variable_declaration_statement
Rule 95    block_statement -> statement
Rule 96    block_statement -> class_declaration
Rule 97    block_statement -> SingletonObject
Rule 98    block_statement -> method_declaration
Rule 99    modifier_opts -> modifier
Rule 100   modifier_opts -> empty
Rule 101   declaration_keyword -> KWRD_VAR
Rule 102   declaration_keyword -> KWRD_VAL
Rule 103   local_variable_declaration_statement -> local_variable_declaration STATE_END
Rule 104   local_variable_declaration -> modifier_opts declaration_keyword variable_declaration_body
Rule 105   variable_declaration_initializer -> expression
Rule 106   variable_declaration_initializer -> array_initializer
Rule 107   variable_declaration_initializer -> class_initializer
Rule 108   variable_arguement_list -> variable_declaration_initializer
Rule 109   variable_arguement_list -> variable_arguement_list COMMA variable_declaration_initializer
Rule 110   variable_declaration_body -> variable_declarator ASSIGN variable_declaration_initializer
Rule 111   variable_declaration_body -> LPAREN variable_declarators RPAREN ASSIGN LPAREN variable_arguement_list RPAREN
Rule 112   variable_declaration_body -> IDENTIFIER ASSIGN LPAREN func_arguement_list_opt RPAREN FUNTYPE expression
Rule 113   variable_declarators -> variable_declarator
Rule 114   variable_declarators -> variable_declarators COMMA variable_declarator
Rule 115   variable_declarator -> variable_declarator_id
Rule 116   variable_declarator_id -> IDENTIFIER COLON type
Rule 117   statement -> normal_statement
Rule 118   statement -> if_then_statement
Rule 119   statement -> if_then_else_statement
Rule 120   statement -> while_statement
Rule 121   statement -> do_while_statement
Rule 122   statement -> for_statement
Rule 123   normal_statement -> block
Rule 124   normal_statement -> expression_statement
Rule 125   normal_statement -> empty_statement
Rule 126   normal_statement -> return_statement
Rule 127   normal_statement -> switch_statement
Rule 128   expression_statement -> statement_expression STATE_END
Rule 129   statement_expression -> assignment
Rule 130   statement_expression -> method_invocation
Rule 131   if_then_statement -> KWRD_IF LPAREN expression RPAREN block
Rule 132   if_then_else_statement -> KWRD_IF LPAREN expression RPAREN if_then_else_intermediate KWRD_ELSE block
Rule 133   if_then_else_statement_precedence -> KWRD_IF LPAREN expression RPAREN if_then_else_intermediate KWRD_ELSE if_then_else_intermediate
Rule 134   if_then_else_intermediate -> block
Rule 135   if_then_else_intermediate -> if_then_else_statement_precedence
Rule 136   while_statement -> KWRD_WHILE LPAREN expression RPAREN block
Rule 137   do_while_statement -> KWRD_DO block KWRD_WHILE LPAREN expression RPAREN STATE_END
Rule 138   for_statement -> KWRD_FOR LPAREN for_logic RPAREN block
Rule 139   for_logic -> for_update
Rule 140   for_logic -> for_update STATE_END for_logic
Rule 141   for_update -> for_loop for_step_opts
Rule 142   for_loop -> IDENTIFIER CHOOSE expression for_untilTo expression
Rule 143   for_untilTo -> KWRD_UNTIL
Rule 144   for_untilTo -> KWRD_TO
Rule 145   for_step_opts -> KWRD_BY expression
Rule 146   for_step_opts -> empty
Rule 147   switch_statement -> expression KWRD_MATCH switch_block
Rule 148   switch_block -> BLOCK_BEGIN BLOCK_END
Rule 149   switch_block -> BLOCK_BEGIN switch_block_statements BLOCK_END
Rule 150   switch_block -> BLOCK_BEGIN switch_labels BLOCK_END
Rule 151   switch_block -> BLOCK_BEGIN switch_block_statements switch_labels BLOCK_END
Rule 152   switch_block_statements -> switch_block_statement
Rule 153   switch_block_statements -> switch_block_statements switch_block_statement
Rule 154   switch_block_statement -> switch_labels block_statements
Rule 155   switch_labels -> switch_label
Rule 156   switch_labels -> switch_labels switch_label
Rule 157   switch_label -> KWRD_CASE expression FUNTYPE
Rule 158   empty_statement -> STATE_END
Rule 159   return_statement -> KWRD_RETURN expression_optional STATE_END
Rule 160   constructor_arguement_list_opt -> constructor_arguement_list
Rule 161   constructor_arguement_list_opt -> empty
Rule 162   constructor_arguement_list -> constructor_arguement_list_declarator
Rule 163   constructor_arguement_list -> constructor_arguement_list COMMA constructor_arguement_list_declarator
Rule 164   constructor_arguement_list_declarator -> declaration_keyword IDENTIFIER COLON type
Rule 165   func_arguement_list_opt -> variable_declarators
Rule 166   func_arguement_list_opt -> empty
Rule 167   class_declaration -> class_header class_body
Rule 168   class_header -> class_header_name class_header_extends_opt
Rule 169   class_header_name -> class_header_name1 func_args_start constructor_arguement_list_opt RPAREN
Rule 170   class_header_name1 -> modifier_opts KWRD_CLASS name
Rule 171   class_header_extends_opt -> class_header_extends
Rule 172   class_header_extends_opt -> empty
Rule 173   class_header_extends -> KWRD_EXTNDS name LPAREN func_arguement_list_opt RPAREN
Rule 174   class_body -> BLOCK_BEGIN block_statements_opt end_scope
Rule 175   method_declaration -> method_header method_body
Rule 176   method_header -> method_header_name func_args_start func_arguement_list_opt RPAREN COLON method_return_type ASSIGN
Rule 177   func_args_start -> LPAREN
Rule 178   method_return_type -> type
Rule 179   method_return_type -> TYPE_VOID
Rule 180   method_header_name -> modifier_opts KWRD_DEF IDENTIFIER
Rule 181   method_body -> BLOCK_BEGIN block_statements_opt end_scope
Rule 182   modifier -> KWRD_PROTECTED
Rule 183   modifier -> KWRD_PRIVATE
Rule 184   type -> primitive_type
Rule 185   type -> reference_type
Rule 186   primitive_type -> TYPE_INT
Rule 187   primitive_type -> TYPE_FLOAT
Rule 188   primitive_type -> TYPE_CHAR
Rule 189   primitive_type -> TYPE_STRING
Rule 190   primitive_type -> TYPE_BOOLEAN
Rule 191   reference_type -> class_data_type
Rule 192   reference_type -> array_data_type
Rule 193   class_data_type -> name
Rule 194   array_data_type -> KWRD_ARRAY LBPAREN type RBPAREN
Rule 195   array_initializer -> KWRD_NEW KWRD_ARRAY LBPAREN type RBPAREN LPAREN INT_CONST RPAREN
Rule 196   array_initializer -> KWRD_ARRAY LPAREN argument_list_opt RPAREN
Rule 197   class_initializer -> KWRD_NEW name LPAREN argument_list_opt RPAREN
Rule 198   empty -> <empty>

Terminals, with rules where they appear

AND                  : 28
AND_ASSIGN           : 22
AND_BITWISE          : 34
ASSIGN               : 14 110 111 112 176
AT                   : 
BLOCK_BEGIN          : 88 148 149 150 151 174 181
BLOCK_END            : 89 148 149 150 151
BOOL_CONSTF          : 69
BOOL_CONSTT          : 68
CHARACTER            : 66
CHOOSE               : 142
COLON                : 116 164 176
COMM                 : 
COMMA                : 78 109 114 163
DIVIDE               : 51
DIVIDE_ASSIGN        : 16
DOT                  : 82
EQUAL                : 36
EXACTEQ              : 
FLOAT_CONST          : 71
FUNTYPE              : 112 157
GEQ                  : 41
GREATER              : 39
IDENTIFIER           : 6 7 7 81 112 116 142 164 180
INNER_CLASS          : 
INT_CONST            : 72 195
KWRD_ABST            : 
KWRD_ARRAY           : 194 195 196
KWRD_BY              : 145
KWRD_CASE            : 157
KWRD_CATCH           : 
KWRD_CLASS           : 170
KWRD_DEF             : 180
KWRD_DO              : 137
KWRD_ELSE            : 132 133
KWRD_EXTNDS          : 7 173
KWRD_FINAL           : 
KWRD_FINALLY         : 
KWRD_FOR             : 138
KWRD_FOREACH         : 
KWRD_FORSOME         : 
KWRD_IF              : 131 132 133
KWRD_IMPLICIT        : 
KWRD_IMPORT          : 
KWRD_LAZY            : 
KWRD_MACRO           : 
KWRD_MATCH           : 147
KWRD_NEW             : 195 197
KWRD_NULL            : 70
KWRD_OBJECT          : 6 7
KWRD_OVERRIDE        : 
KWRD_PACKAGE         : 
KWRD_PRIVATE         : 183
KWRD_PROTECTED       : 182
KWRD_PUBLIC          : 
KWRD_RETURN          : 159
KWRD_SEALED          : 
KWRD_STATIC          : 
KWRD_SUPER           : 
KWRD_THIS            : 
KWRD_THROW           : 
KWRD_TO              : 144
KWRD_TRAIT           : 
KWRD_TRY             : 
KWRD_TYPE            : 
KWRD_UNTIL           : 143
KWRD_VAL             : 102
KWRD_VAR             : 101
KWRD_WHILE           : 136 137
KWRD_WITH            : 
KWRD_YIELD           : 
LBPAREN              : 74 194 195
LEQ                  : 42
LESS                 : 40
LOWER_BOUND          : 
LPAREN               : 61 62 73 111 111 112 131 132 133 136 137 138 173 177 195 196 197
LSHIFT               : 44
LSHIFT_ASSIGN        : 20
MINUS                : 48 54
MINUS_ASSIGN         : 19
NEQUAL               : 37
NIL                  : 
NOT                  : 58
OR                   : 26
OR_ASSIGN            : 23
OR_BITWISE           : 30
PLUS                 : 47 53
PLUS_ASSIGN          : 18
QUESTION             : 
RBPAREN              : 74 194 195
REMAINDER            : 52
REMAINDER_ASSIGN     : 17
RPAREN               : 61 62 73 111 111 112 131 132 133 136 137 138 169 173 176 195 196 197
RSHIFT               : 45
RSHIFT_ASSIGN        : 21
STATE_END            : 103 128 137 140 158 159
STRING_CONST         : 67
SUBTYPE              : 
TILDA                : 57
TIMES                : 50
TIMES_ASSIGN         : 15
TYPE_BOOLEAN         : 190
TYPE_CHAR            : 188
TYPE_FLOAT           : 187
TYPE_INT             : 186
TYPE_STRING          : 189
TYPE_VOID            : 179
UNDER                : 
UPPER_BOUND          : 
VIEW                 : 
VIEWABLE             : 
XOR                  : 32
XOR_ASSIGN           : 24
error                : 
newline              : 

Nonterminals, with rules where they appear

ObjectDeclare        : 5
ProgramStructure     : 1 0
SingletonObject      : 3 97
additive_expression  : 43 44 45 47 48
and_expression       : 31 32 34
argument_list        : 75 78
argument_list_opt    : 73 196 197
array_access         : 84
array_data_type      : 192
array_initializer    : 106
assignment           : 11 129
assignment_expression : 8 13
assignment_operator  : 13
base_variable_set    : 56
block                : 5 123 131 132 134 136 137 138
block_statement      : 92 93
block_statements     : 90 93 154
block_statements_opt : 87 174 181
cast_expression      : 59
class_and_objects    : 1 2
class_body           : 167
class_data_type      : 191
class_declaration    : 4 96
class_header         : 167
class_header_extends : 171
class_header_extends_opt : 168
class_header_name    : 168
class_header_name1   : 169
class_initializer    : 107
conditional_and_expression : 25 26 28
conditional_or_expression : 12 26
constructor_arguement_list : 160 163
constructor_arguement_list_declarator : 162 163
constructor_arguement_list_opt : 169
declaration_keyword  : 104 164
do_while_statement   : 121
empty                : 10 76 91 100 146 161 166 172
empty_statement      : 125
end_scope            : 87 174 181
equality_expression  : 33 34 36 37
exclusive_or_expression : 29 30 32
expression           : 9 61 74 77 78 105 112 131 132 133 136 137 142 142 145 147 157
expression_optional  : 159
expression_statement : 124
for_logic            : 138 140
for_loop             : 141
for_statement        : 122
for_step_opts        : 141
for_untilTo          : 142
for_update           : 139 140
func_args_start      : 169 176
func_arguement_list_opt : 112 173 176
if_then_else_intermediate : 132 133 133
if_then_else_statement : 119
if_then_else_statement_precedence : 135
if_then_statement    : 118
inclusive_or_expression : 27 28 30
int_float            : 65
literal              : 63
local_variable_declaration : 103
local_variable_declaration_statement : 94
method_body          : 175
method_declaration   : 98
method_header        : 175
method_header_name   : 176
method_invocation    : 64 130
method_return_type   : 176
modifier             : 99
modifier_opts        : 104 170 180
multiplicative_expression : 46 47 48 50 51 52
name                 : 73 74 82 83 170 173 193 197
normal_statement     : 117
primary              : 86
primitive_type       : 62 184
qualified_name       : 80
reference_type       : 185
relational_expression : 35 36 37 39 40 41 42
return_statement     : 126
shift_expression     : 38 39 40 41 42 44 45
simple_name          : 79 82
start_scope          : 87
statement            : 95
statement_expression : 128
switch_block         : 147
switch_block_statement : 152 153
switch_block_statements : 149 151 153
switch_label         : 155 156
switch_labels        : 150 151 154 156
switch_statement     : 127
type                 : 116 164 178 194 195
unary_expression     : 49 50 51 52 53 54 57 58 62
unary_expression_not_plus_minus : 55
valid_variable       : 13 85
variable_arguement_list : 109 111
variable_declaration_body : 104
variable_declaration_initializer : 108 109 110
variable_declarator  : 110 113 114
variable_declarator_id : 115
variable_declarators : 111 114 165
variable_literal     : 60
while_statement      : 120

Parsing method: LALR

state 0

    (0) S' -> . ProgramStructure
    (1) ProgramStructure -> . ProgramStructure class_and_objects
    (2) ProgramStructure -> . class_and_objects
    (3) class_and_objects -> . SingletonObject
    (4) class_and_objects -> . class_declaration
    (5) SingletonObject -> . ObjectDeclare block
    (167) class_declaration -> . class_header class_body
    (6) ObjectDeclare -> . KWRD_OBJECT IDENTIFIER
    (7) ObjectDeclare -> . KWRD_OBJECT IDENTIFIER KWRD_EXTNDS IDENTIFIER
    (168) class_header -> . class_header_name class_header_extends_opt
    (169) class_header_name -> . class_header_name1 func_args_start constructor_arguement_list_opt RPAREN
    (170) class_header_name1 -> . modifier_opts KWRD_CLASS name
    (99) modifier_opts -> . modifier
    (100) modifier_opts -> . empty
    (182) modifier -> . KWRD_PROTECTED
    (183) modifier -> . KWRD_PRIVATE
    (198) empty -> .

    KWRD_OBJECT     shift and go to state 4
    KWRD_PROTECTED  shift and go to state 10
    KWRD_PRIVATE    shift and go to state 14
    KWRD_CLASS      reduce using rule 198 (empty -> .)

    class_header_name              shift and go to state 3
    ProgramStructure               shift and go to state 6
    ObjectDeclare                  shift and go to state 1
    class_header_name1             shift and go to state 2
    class_declaration              shift and go to state 11
    class_and_objects              shift and go to state 12
    empty                          shift and go to state 5
    SingletonObject                shift and go to state 7
    modifier                       shift and go to state 13
    class_header                   shift and go to state 8
    modifier_opts                  shift and go to state 9

state 1

    (5) SingletonObject -> ObjectDeclare . block
    (87) block -> . start_scope block_statements_opt end_scope
    (88) start_scope -> . BLOCK_BEGIN

    BLOCK_BEGIN     shift and go to state 15

    start_scope                    shift and go to state 16
    block                          shift and go to state 17

state 2

    (169) class_header_name -> class_header_name1 . func_args_start constructor_arguement_list_opt RPAREN
    (177) func_args_start -> . LPAREN

    LPAREN          shift and go to state 19

    func_args_start                shift and go to state 18

state 3

    (168) class_header -> class_header_name . class_header_extends_opt
    (171) class_header_extends_opt -> . class_header_extends
    (172) class_header_extends_opt -> . empty
    (173) class_header_extends -> . KWRD_EXTNDS name LPAREN func_arguement_list_opt RPAREN
    (198) empty -> .

    KWRD_EXTNDS     shift and go to state 22
    BLOCK_BEGIN     reduce using rule 198 (empty -> .)

    class_header_extends           shift and go to state 20
    class_header_extends_opt       shift and go to state 21
    empty                          shift and go to state 23

state 4

    (6) ObjectDeclare -> KWRD_OBJECT . IDENTIFIER
    (7) ObjectDeclare -> KWRD_OBJECT . IDENTIFIER KWRD_EXTNDS IDENTIFIER

    IDENTIFIER      shift and go to state 24


state 5

    (100) modifier_opts -> empty .

    KWRD_CLASS      reduce using rule 100 (modifier_opts -> empty .)
    KWRD_DEF        reduce using rule 100 (modifier_opts -> empty .)
    KWRD_VAR        reduce using rule 100 (modifier_opts -> empty .)
    KWRD_VAL        reduce using rule 100 (modifier_opts -> empty .)


state 6

    (0) S' -> ProgramStructure .
    (1) ProgramStructure -> ProgramStructure . class_and_objects
    (3) class_and_objects -> . SingletonObject
    (4) class_and_objects -> . class_declaration
    (5) SingletonObject -> . ObjectDeclare block
    (167) class_declaration -> . class_header class_body
    (6) ObjectDeclare -> . KWRD_OBJECT IDENTIFIER
    (7) ObjectDeclare -> . KWRD_OBJECT IDENTIFIER KWRD_EXTNDS IDENTIFIER
    (168) class_header -> . class_header_name class_header_extends_opt
    (169) class_header_name -> . class_header_name1 func_args_start constructor_arguement_list_opt RPAREN
    (170) class_header_name1 -> . modifier_opts KWRD_CLASS name
    (99) modifier_opts -> . modifier
    (100) modifier_opts -> . empty
    (182) modifier -> . KWRD_PROTECTED
    (183) modifier -> . KWRD_PRIVATE
    (198) empty -> .

    KWRD_OBJECT     shift and go to state 4
    KWRD_PROTECTED  shift and go to state 10
    KWRD_PRIVATE    shift and go to state 14
    KWRD_CLASS      reduce using rule 198 (empty -> .)

    class_header_name              shift and go to state 3
    ObjectDeclare                  shift and go to state 1
    class_header_name1             shift and go to state 2
    class_declaration              shift and go to state 11
    class_and_objects              shift and go to state 25
    empty                          shift and go to state 5
    SingletonObject                shift and go to state 7
    modifier                       shift and go to state 13
    class_header                   shift and go to state 8
    modifier_opts                  shift and go to state 9

state 7

    (3) class_and_objects -> SingletonObject .

    KWRD_OBJECT     reduce using rule 3 (class_and_objects -> SingletonObject .)
    KWRD_PROTECTED  reduce using rule 3 (class_and_objects -> SingletonObject .)
    KWRD_PRIVATE    reduce using rule 3 (class_and_objects -> SingletonObject .)
    $end            reduce using rule 3 (class_and_objects -> SingletonObject .)
    KWRD_CLASS      reduce using rule 3 (class_and_objects -> SingletonObject .)


state 8

    (167) class_declaration -> class_header . class_body
    (174) class_body -> . BLOCK_BEGIN block_statements_opt end_scope

    BLOCK_BEGIN     shift and go to state 27

    class_body                     shift and go to state 26

state 9

    (170) class_header_name1 -> modifier_opts . KWRD_CLASS name

    KWRD_CLASS      shift and go to state 28


state 10

    (182) modifier -> KWRD_PROTECTED .

    KWRD_DEF        reduce using rule 182 (modifier -> KWRD_PROTECTED .)
    KWRD_CLASS      reduce using rule 182 (modifier -> KWRD_PROTECTED .)
    KWRD_VAR        reduce using rule 182 (modifier -> KWRD_PROTECTED .)
    KWRD_VAL        reduce using rule 182 (modifier -> KWRD_PROTECTED .)


state 11

    (4) class_and_objects -> class_declaration .

    KWRD_OBJECT     reduce using rule 4 (class_and_objects -> class_declaration .)
    KWRD_PROTECTED  reduce using rule 4 (class_and_objects -> class_declaration .)
    KWRD_PRIVATE    reduce using rule 4 (class_and_objects -> class_declaration .)
    $end            reduce using rule 4 (class_and_objects -> class_declaration .)
    KWRD_CLASS      reduce using rule 4 (class_and_objects -> class_declaration .)


state 12

    (2) ProgramStructure -> class_and_objects .

    KWRD_OBJECT     reduce using rule 2 (ProgramStructure -> class_and_objects .)
    KWRD_PROTECTED  reduce using rule 2 (ProgramStructure -> class_and_objects .)
    KWRD_PRIVATE    reduce using rule 2 (ProgramStructure -> class_and_objects .)
    $end            reduce using rule 2 (ProgramStructure -> class_and_objects .)
    KWRD_CLASS      reduce using rule 2 (ProgramStructure -> class_and_objects .)


state 13

    (99) modifier_opts -> modifier .

    KWRD_CLASS      reduce using rule 99 (modifier_opts -> modifier .)
    KWRD_DEF        reduce using rule 99 (modifier_opts -> modifier .)
    KWRD_VAR        reduce using rule 99 (modifier_opts -> modifier .)
    KWRD_VAL        reduce using rule 99 (modifier_opts -> modifier .)


state 14

    (183) modifier -> KWRD_PRIVATE .

    KWRD_DEF        reduce using rule 183 (modifier -> KWRD_PRIVATE .)
    KWRD_CLASS      reduce using rule 183 (modifier -> KWRD_PRIVATE .)
    KWRD_VAR        reduce using rule 183 (modifier -> KWRD_PRIVATE .)
    KWRD_VAL        reduce using rule 183 (modifier -> KWRD_PRIVATE .)


state 15

    (88) start_scope -> BLOCK_BEGIN .

    KWRD_IF         reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_WHILE      reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_DO         reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_FOR        reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_OBJECT     reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    STATE_END       reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_RETURN     reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_PROTECTED  reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_PRIVATE    reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    BLOCK_BEGIN     reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    IDENTIFIER      reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    PLUS            reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    MINUS           reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    TILDA           reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    NOT             reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    LPAREN          reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    CHARACTER       reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    STRING_CONST    reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    BOOL_CONSTT     reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    BOOL_CONSTF     reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_NULL       reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    FLOAT_CONST     reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    INT_CONST       reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    BLOCK_END       reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_DEF        reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_CLASS      reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_VAR        reduce using rule 88 (start_scope -> BLOCK_BEGIN .)
    KWRD_VAL        reduce using rule 88 (start_scope -> BLOCK_BEGIN .)


state 16
